<resources>
    <string name="app_name">CookBook</string>
    <string name="title_categories">Categories</string>
    <string name="title_yourRecipes">Your Recipes</string>
    <string name="title_favourites">Favourites</string>
    <string name="recipe_title">Title</string>
    <string name="recipe_button">View Full Recipe</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_publisher">Publisher</string>
    <string name="recipe_publisher_placeholder">Publisher Name</string>
    <string name="no_categories">No categories :(</string>
    <string name="search">Search</string>
    <string name="hint_recipe_title">Recipe Title</string>
    <string name="hint_steps">Steps</string>
    <string name="hint_add_ingredients">Insert ingredients</string>
    <string name="hint_add_steps">Insert steps</string>
    <string name="add_recipe_button">Add Recipe</string>
    <string name="add_image">Select Image</string>
    <string name="delete_button">Delete Recipe</string>
    <string name="no_recipes_added">You have not added any recipes</string>
    <string name="no_favourites">You have not favourited any recipes</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="toRegister">Register here</string>
    <string name="register">Register</string>
    <string name="toLogin">Login here</string>



</resources>