<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="60dp"
    android:paddingBottom="50dp"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <EditText
        android:id="@+id/addRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:hint="@string/hint_recipe_title"
        />
    <ImageView
        android:id="@+id/addImage"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/friedchicken"
        android:padding="5dp"
        android:layout_gravity="center"
        />
            <Button
                android:id="@+id/addImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:background="@color/pink"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />
    <TextView
        android:id="@+id/addIngredientsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_ingredients"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        />

    <EditText
        android:id="@+id/addIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_ingredients"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/addStepsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_steps"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        />

    <EditText
        android:id="@+id/addSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_steps"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/addRecipeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_button"
        android:background="@color/orange"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
        </LinearLayout>
    </ScrollView>
</LinearLayout>