<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="60dp"
    android:paddingBottom="50dp"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">
             <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/recipe_title"
                android:gravity="center"
                android:textSize="40sp"
                android:textStyle="bold"
                 />
            <Button
                android:id="@+id/favouriteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:background="@drawable/favourite"
                />
        </LinearLayout>
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/friedchicken"
        android:padding="5dp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/publisherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_publisher"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        />

    <TextView
        android:id="@+id/publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_publisher"
        android:textSize="20dp"
        android:paddingLeft="55dp"
        android:paddingTop="10dp"
        />

    <TextView
        android:id="@+id/ingredientsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_ingredients"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="55dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_button"
        android:background="@color/orange"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
